create admin and officer portal and chnaged to ollama-3.3-70b-instruct model for chatbot